<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A3D42"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/setting_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/banner_height"
        android:layout_marginTop="@dimen/banner_paddingTop"
        android:background="@drawable/top_bk" >

        <ImageView
            android:id="@+id/setting_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/title_setting_margin"
            android:background="@drawable/btn_menu_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/gerneral_setting"
            android:textColor="@color/grey_white"
            android:textSize="@dimen/normal_text_size" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting_title"
        android:background="@drawable/top_bk_shadow"/>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/setting_title"
        android:scrollbarThumbVertical="@drawable/scrollbar" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp" >
            
            <RelativeLayout
                android:id="@+id/setting_wakeup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/setting_list_bk" >

                <TextView
                    android:id="@+id/setting_wakeup_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/help_menu_margin"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/wakeup"
                    android:textColor="@color/grey_white"
                    android:textSize="@dimen/bigger_text_size" />

                <ImageView
                    android:id="@+id/setting_wakeup_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dip"
                    android:background="@drawable/setting_closed" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/WakeupDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/setting_wakeup" >

                <TextView
                    android:id="@+id/settingWakeupLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/help_menu_margin"
                    android:paddingBottom="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/wakeup_command"
                    android:textColor="@color/grey_white"
                    android:textSize="@dimen/smaller_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/setting_float"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/WakeupDescription"
                android:background="@drawable/setting_list_bk" >

                <TextView
                    android:id="@+id/setting_float_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/help_menu_margin"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/float_window"
                    android:textColor="@color/grey_white"
                    android:textSize="@dimen/bigger_text_size" />

                <ImageView
                    android:id="@+id/setting_float_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dip"
                    android:background="@drawable/setting_closed" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/floatWindowsDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/setting_float" >

                <TextView
                    android:id="@+id/textViewFloatViewLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/help_menu_margin"
                    android:paddingBottom="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/float_window_open"
                    android:textColor="@color/grey_white"
                    android:textSize="@dimen/smaller_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/setting_map"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/floatWindowsDescription"
                android:background="@drawable/setting_list_bk" >

                <TextView
                    android:id="@+id/setting_map_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/help_menu_margin"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/map_choose"
                    android:textColor="@color/grey_white"
                    android:textSize="@dimen/bigger_text_size" />

                <TextView
                    android:id="@+id/textViewMapLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/setting_map_text"
                    android:textColor="@color/grey_white"
                    android:textSize="@dimen/normal_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/tts_speed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-2dp"
                android:layout_below="@+id/setting_map"
                android:background="@drawable/setting_list_bk" >

                <TextView
                    android:id="@+id/setting_tts_speed_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/help_menu_margin"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:layout_centerVertical="true"
                    android:text="@string/tts_speed"
                    android:textColor="@color/grey_white"
                    android:textSize="@dimen/bigger_text_size" />

                <TextView
                    android:id="@+id/textViewTtsLbl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/setting_tts_speed_text"
                    android:textColor="@color/grey_white"
                    android:textSize="@dimen/help_menu_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/setting_help"
                android:layout_width="match_parent"
                android:layout_height="@dimen/banner_height"
                android:layout_below="@+id/tts_speed"
                android:layout_marginTop="8dp"
                android:background="@drawable/setting_list_bk" >

                <TextView
                    android:id="@+id/settingHelpText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/help_menu_margin"
                    android:layout_centerVertical="true"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/setting_help"
                    android:textColor="@color/grey_white"
                    android:textSize="@dimen/bigger_text_size" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
